--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1156,6 +1156,9 @@ select {
 .top-2 {
 	top: 0.5rem;
 }
+.top-10 {
+	top: 2.5rem;
+}
 .z-0 {
 	z-index: 0;
 }
@@ -1186,6 +1189,9 @@ select {
 .col-span-3 {
 	grid-column: span 3 / span 3;
 }
+.col-span-1 {
+	grid-column: span 1 / span 1;
+}
 .col-start-1 {
 	grid-column-start: 1;
 }
@@ -1209,6 +1215,10 @@ select {
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
 }
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
 .mx-1 {
 	margin-left: 0.25rem;
 	margin-right: 0.25rem;
@@ -1216,10 +1226,6 @@ select {
 .-my-2 {
 	margin-top: -0.5rem;
 	margin-bottom: -0.5rem;
-}
-.my-4 {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
 }
 .mx-6 {
 	margin-left: 1.5rem;
@@ -1232,6 +1238,10 @@ select {
 .my-3 {
 	margin-top: 0.75rem;
 	margin-bottom: 0.75rem;
+}
+.my-20 {
+	margin-top: 5rem;
+	margin-bottom: 5rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1317,6 +1327,9 @@ select {
 .mb-5 {
 	margin-bottom: 1.25rem;
 }
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
 .mt-0\.5 {
 	margin-top: 0.125rem;
 }
@@ -1325,9 +1338,6 @@ select {
 }
 .mb-8 {
 	margin-bottom: 2rem;
-}
-.mb-2 {
-	margin-bottom: 0.5rem;
 }
 .mt-12 {
 	margin-top: 3rem;
@@ -1346,6 +1356,15 @@ select {
 }
 .mt-auto {
 	margin-top: auto;
+}
+.mb-16 {
+	margin-bottom: 4rem;
+}
+.-ml-4 {
+	margin-left: -1rem;
+}
+.-mt-44 {
+	margin-top: -11rem;
 }
 .block {
 	display: block;
@@ -1419,6 +1438,9 @@ select {
 .h-48 {
 	height: 12rem;
 }
+.h-screen {
+	height: 100vh;
+}
 .min-h-screen {
 	min-height: 100vh;
 }
@@ -1488,6 +1510,12 @@ select {
 .w-1\/3 {
 	width: 33.333333%;
 }
+.w-11\/12 {
+	width: 91.666667%;
+}
+.w-6\/12 {
+	width: 50%;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1508,6 +1536,9 @@ select {
 }
 .max-w-4xl {
 	max-width: 56rem;
+}
+.max-w-5xl {
+	max-width: 64rem;
 }
 .flex-1 {
 	flex: 1 1 0%;
@@ -1557,6 +1588,18 @@ select {
 	--tw-translate-y: -50%;
 	transform: var(--tw-transform);
 }
+.-translate-x-10 {
+	--tw-translate-x: -2.5rem;
+	transform: var(--tw-transform);
+}
+.translate-x-10 {
+	--tw-translate-x: 2.5rem;
+	transform: var(--tw-transform);
+}
+.rotate-3 {
+	--tw-rotate: 3deg;
+	transform: var(--tw-transform);
+}
 .scale-95 {
 	--tw-scale-x: .95;
 	--tw-scale-y: .95;
@@ -1570,6 +1613,11 @@ select {
 .scale-90 {
 	--tw-scale-x: .9;
 	--tw-scale-y: .9;
+	transform: var(--tw-transform);
+}
+.scale-110 {
+	--tw-scale-x: 1.1;
+	--tw-scale-y: 1.1;
 	transform: var(--tw-transform);
 }
 .transform {
@@ -1657,11 +1705,20 @@ select {
 .flex-col {
 	flex-direction: column;
 }
+.flex-col-reverse {
+	flex-direction: column-reverse;
+}
 .flex-wrap {
 	flex-wrap: wrap;
 }
+.items-start {
+	align-items: flex-start;
+}
 .items-center {
 	align-items: center;
+}
+.justify-start {
+	justify-content: flex-start;
 }
 .justify-end {
 	justify-content: flex-end;
@@ -1683,6 +1740,15 @@ select {
 }
 .gap-1 {
 	gap: 0.25rem;
+}
+.gap-10 {
+	gap: 2.5rem;
+}
+.gap-2 {
+	gap: 0.5rem;
+}
+.gap-y-12 {
+	row-gap: 3rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1708,6 +1774,21 @@ select {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(1rem * var(--tw-space-x-reverse));
+	margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-6 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-y-reverse: 0;
@@ -1994,6 +2075,9 @@ select {
 .p-5 {
 	padding: 1.25rem;
 }
+.p-12 {
+	padding: 3rem;
+}
 .px-4 {
 	padding-left: 1rem;
 	padding-right: 1rem;
@@ -2066,6 +2150,10 @@ select {
 	padding-left: 4rem;
 	padding-right: 4rem;
 }
+.py-20 {
+	padding-top: 5rem;
+	padding-bottom: 5rem;
+}
 .pt-6 {
 	padding-top: 1.5rem;
 }
@@ -2113,6 +2201,18 @@ select {
 }
 .pb-5 {
 	padding-bottom: 1.25rem;
+}
+.pb-16 {
+	padding-bottom: 4rem;
+}
+.pt-16 {
+	padding-top: 4rem;
+}
+.pr-6 {
+	padding-right: 1.5rem;
+}
+.pt-36 {
+	padding-top: 9rem;
 }
 .text-left {
 	text-align: left;
@@ -2164,6 +2264,10 @@ select {
 	font-size: 1.875rem;
 	line-height: 2.25rem;
 }
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
+}
 .font-medium {
 	font-weight: 500;
 }
@@ -2175,6 +2279,12 @@ select {
 }
 .font-black {
 	font-weight: 900;
+}
+.font-extrabold {
+	font-weight: 800;
+}
+.font-normal {
+	font-weight: 400;
 }
 .uppercase {
 	text-transform: uppercase;
@@ -2206,11 +2316,17 @@ select {
 .leading-none {
 	line-height: 1;
 }
+.leading-normal {
+	line-height: 1.5;
+}
 .tracking-widest {
 	letter-spacing: 0.1em;
 }
 .tracking-wider {
 	letter-spacing: 0.05em;
+}
+.tracking-tight {
+	letter-spacing: -0.025em;
 }
 .text-gray-500 {
 	--tw-text-opacity: 1;
@@ -2307,6 +2423,14 @@ select {
 .text-yellow-400 {
 	--tw-text-opacity: 1;
 	color: rgba(251, 191, 36, var(--tw-text-opacity));
+}
+.text-black {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+.text-gray-100 {
+	--tw-text-opacity: 1;
+	color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2542,6 +2666,14 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
+.hover\:text-gray-300:hover {
+	--tw-text-opacity: 1;
+	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+.hover\:text-gray-200:hover {
+	--tw-text-opacity: 1;
+	color: rgba(229, 231, 235, var(--tw-text-opacity));
+}
 .hover\:underline:hover {
 	text-decoration: underline;
 }
@@ -2742,6 +2874,10 @@ select {
 		margin-top: 2.5rem;
 	}
 
+	.sm\:mb-10 {
+		margin-bottom: 2.5rem;
+	}
+
 	.sm\:block {
 		display: block;
 	}
@@ -2768,6 +2904,10 @@ select {
 
 	.sm\:w-4\/12 {
 		width: 33.333333%;
+	}
+
+	.sm\:w-40 {
+		width: 10rem;
 	}
 
 	.sm\:max-w-md {
@@ -2815,6 +2955,14 @@ select {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
+	.sm\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.sm\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+
 	.sm\:items-start {
 		align-items: flex-start;
 	}
@@ -2833,6 +2981,19 @@ select {
 
 	.sm\:justify-between {
 		justify-content: space-between;
+	}
+
+	.sm\:gap-8 {
+		gap: 2rem;
+	}
+
+	.sm\:gap-y-0 {
+		row-gap: 0px;
+	}
+
+	.sm\:gap-x-20 {
+		-moz-column-gap: 5rem;
+		     column-gap: 5rem;
 	}
 
 	.sm\:rounded-lg {
@@ -2878,6 +3039,11 @@ select {
 		padding-right: 5rem;
 	}
 
+	.sm\:py-16 {
+		padding-top: 4rem;
+		padding-bottom: 4rem;
+	}
+
 	.sm\:pt-0 {
 		padding-top: 0px;
 	}
@@ -2888,6 +3054,10 @@ select {
 
 	.sm\:text-left {
 		text-align: left;
+	}
+
+	.sm\:leading-snug {
+		line-height: 1.375;
 	}
 }
 @media (min-width: 768px) {
@@ -2916,6 +3086,14 @@ select {
 		margin-bottom: 0px;
 	}
 
+	.md\:mr-6 {
+		margin-right: 1.5rem;
+	}
+
+	.md\:mt-12 {
+		margin-top: 3rem;
+	}
+
 	.md\:block {
 		display: block;
 	}
@@ -2932,6 +3110,18 @@ select {
 		width: 25%;
 	}
 
+	.md\:w-2\/3 {
+		width: 66.666667%;
+	}
+
+	.md\:w-1\/4 {
+		width: 25%;
+	}
+
+	.md\:w-auto {
+		width: auto;
+	}
+
 	.md\:flex-auto {
 		flex: 1 1 auto;
 	}
@@ -2944,6 +3134,10 @@ select {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
+	.md\:grid-cols-6 {
+		grid-template-columns: repeat(6, minmax(0, 1fr));
+	}
+
 	.md\:flex-row {
 		flex-direction: row;
 	}
@@ -2952,12 +3146,49 @@ select {
 		flex-direction: row-reverse;
 	}
 
+	.md\:items-end {
+		align-items: flex-end;
+	}
+
+	.md\:items-center {
+		align-items: center;
+	}
+
 	.md\:justify-start {
 		justify-content: flex-start;
 	}
 
+	.md\:justify-end {
+		justify-content: flex-end;
+	}
+
+	.md\:justify-center {
+		justify-content: center;
+	}
+
 	.md\:gap-6 {
 		gap: 1.5rem;
+	}
+
+	.md\:gap-x-28 {
+		-moz-column-gap: 7rem;
+		     column-gap: 7rem;
+	}
+
+	.md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-y-reverse: 0;
+		margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+		margin-bottom: calc(0px * var(--tw-space-y-reverse));
+	}
+
+	.md\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-x-reverse: 0;
+		margin-right: calc(1rem * var(--tw-space-x-reverse));
+		margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+	}
+
+	.md\:rounded-md {
+		border-radius: 0.375rem;
 	}
 
 	.md\:border-t-0 {
@@ -2971,6 +3202,39 @@ select {
 	.md\:px-4 {
 		padding-left: 1rem;
 		padding-right: 1rem;
+	}
+
+	.md\:py-16 {
+		padding-top: 4rem;
+		padding-bottom: 4rem;
+	}
+
+	.md\:px-6 {
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
+
+	.md\:pt-2 {
+		padding-top: 0.5rem;
+	}
+
+	.md\:pt-32 {
+		padding-top: 8rem;
+	}
+
+	.md\:text-3xl {
+		font-size: 1.875rem;
+		line-height: 2.25rem;
+	}
+
+	.md\:text-lg {
+		font-size: 1.125rem;
+		line-height: 1.75rem;
+	}
+
+	.md\:shadow-2xl {
+		--tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+		box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 	}
 }
 @media (min-width: 1024px) {
@@ -3004,6 +3268,14 @@ select {
 		width: 33.333333%;
 	}
 
+	.lg\:w-2\/3 {
+		width: 66.666667%;
+	}
+
+	.lg\:w-1\/4 {
+		width: 25%;
+	}
+
 	.lg\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
@@ -3016,9 +3288,44 @@ select {
 		grid-template-columns: repeat(4, minmax(0, 1fr));
 	}
 
+	.lg\:border-b {
+		border-bottom-width: 1px;
+	}
+
+	.lg\:border-r {
+		border-right-width: 1px;
+	}
+
+	.lg\:border-l {
+		border-left-width: 1px;
+	}
+
 	.lg\:px-8 {
 		padding-left: 2rem;
 		padding-right: 2rem;
+	}
+
+	.lg\:py-16 {
+		padding-top: 4rem;
+		padding-bottom: 4rem;
+	}
+
+	.lg\:px-4 {
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
+
+	.lg\:pt-10 {
+		padding-top: 2.5rem;
+	}
+
+	.lg\:pt-40 {
+		padding-top: 10rem;
+	}
+
+	.lg\:text-xl {
+		font-size: 1.25rem;
+		line-height: 1.75rem;
 	}
 }
 @media (min-width: 1280px) {
@@ -3031,8 +3338,126 @@ select {
 		grid-column: span 2 / span 2;
 	}
 
+	.xl\:mx-auto {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.xl\:mt-10 {
+		margin-top: 2.5rem;
+	}
+
+	.xl\:mt-0 {
+		margin-top: 0px;
+	}
+
+	.xl\:w-2\/3 {
+		width: 66.666667%;
+	}
+
+	.xl\:w-10\/12 {
+		width: 83.333333%;
+	}
+
+	.xl\:w-1\/4 {
+		width: 25%;
+	}
+
+	.xl\:w-72 {
+		width: 18rem;
+	}
+
 	.xl\:grid-cols-5 {
 		grid-template-columns: repeat(5, minmax(0, 1fr));
+	}
+
+	.xl\:flex-row {
+		flex-direction: row;
+	}
+
+	.xl\:items-start {
+		align-items: flex-start;
+	}
+
+	.xl\:justify-center {
+		justify-content: center;
+	}
+
+	.xl\:justify-between {
+		justify-content: space-between;
+	}
+
+	.xl\:gap-8 {
+		gap: 2rem;
+	}
+
+	.xl\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-x-reverse: 0;
+		margin-right: calc(2rem * var(--tw-space-x-reverse));
+		margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+	}
+
+	.xl\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-x-reverse: 0;
+		margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+		margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+	}
+
+	.xl\:border-b {
+		border-bottom-width: 1px;
+	}
+
+	.xl\:border-r {
+		border-right-width: 1px;
+	}
+
+	.xl\:border-l {
+		border-left-width: 1px;
+	}
+
+	.xl\:py-16 {
+		padding-top: 4rem;
+		padding-bottom: 4rem;
+	}
+
+	.xl\:px-20 {
+		padding-left: 5rem;
+		padding-right: 5rem;
+	}
+
+	.xl\:pb-10 {
+		padding-bottom: 2.5rem;
+	}
+
+	.xl\:pt-10 {
+		padding-top: 2.5rem;
+	}
+
+	.xl\:pt-96 {
+		padding-top: 24rem;
+	}
+
+	.xl\:text-5xl {
+		font-size: 3rem;
+		line-height: 1;
+	}
+
+	.xl\:text-2xl {
+		font-size: 1.5rem;
+		line-height: 2rem;
+	}
+
+	.xl\:text-xl {
+		font-size: 1.25rem;
+		line-height: 1.75rem;
+	}
+
+	.xl\:font-semibold {
+		font-weight: 600;
+	}
+
+	.xl\:leading-5 {
+		line-height: 1.25rem;
 	}
 }
 
